<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LienarViewOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.iterationone.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
        
    <CheckBox android:id="@+id/rememberbox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/chk_remember"
		android:checked="true" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin" />
        
   	<TextView
   	    android:id="@+id/result"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:textSize="50sp" />
   	    
	<Button
        android:id="@+id/launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch" />
	
	<Button
        android:id="@+id/try_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_try_intent" />

</LinearLayout>